<resources>

    <!-- main navigation -->
    <string name="main_navigation_bottom_nav_more_title">More</string>
    <string name="main_navigation_bottom_nav_rides_title">Rides</string>
    <string name="main_navigation_bottom_nav_invoice">Invoice</string>

    <!-- invoice -->
    <string name="invoice_title">Invoice</string>
    <string-array name="invoice_month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="invoice_currencie_symbol" translatable="false">€</string>
    <string name="invoice_pay_invoice">Pay invoice</string>

    <!-- internet error state -->
    <string name="internet_error_state_try_again_button">Try again</string>
    <string name="internet_error_state_title">Whoops!</string>
    <string name="internet_error_state_body">There is no internet connection. \n Please check your connection and try again.</string>

    <!-- ride -->
    <string name="ride_currencies_euro">euros</string>
    <string name="ride_average_euro_km">euros/km</string>
    <string name="ride_distance_km" translatable="false">km</string>
    <string name="ride_rides">rides</string>
    <string name="ride_min" translatable="false">min</string>
    <string name="ride_no_data_title">Nothing</string>
    <string name="ride_no_data_body">You did not make any trips this day.</string>

    <!-- login -->
    <string name="login" translatable="false">login</string>
    <string name="login_username_hint">Enter username</string>
    <string name="login_password_hint">Enter password</string>
    <string name="login_to_short_username_error">Sorry, your username is too short</string>
    <string name="login_to_short_password_error">Sorry, your password is too short</string>
    <string name="login_invalid_password">Sorry, your password is incorrect</string>
</resources>
