<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mainNavigationBottomNavInvoice"
        android:icon="@drawable/ic_description"
        android:title="@string/main_navigation_bottom_nav_invoice"
        app:showAsAction ="ifRoom"/>

    <item
        android:id="@+id/mainNavigationBottomNavRides"
        android:icon="@drawable/ic_directions_car"
        android:title="@string/main_navigation_bottom_nav_rides_title"
        app:showAsAction ="ifRoom"/>

    <item
        android:id="@+id/mainNavigationBottomNavMore"
        android:icon="@drawable/ic_menu"
        android:title="@string/main_navigation_bottom_nav_more_title"
        app:showAsAction ="ifRoom"/>
</menu>