<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationContainer"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/grid_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_internet_animation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/internetErrorStateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_4"
        android:text="@string/internet_error_state_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationContainer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/internetErrorStateBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2"
        android:text="@string/internet_error_state_body"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppTheme.Subtitle1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetErrorStateTitle" />

    <Button
        android:id="@+id/internetErrorStateTryAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_2"
        android:text="@string/internet_error_state_try_again_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internetErrorStateBody" />
</androidx.constraintlayout.widget.ConstraintLayout>